# lexie

./: .gitignore  README.md
firmware/: README.md  config.example.json  wx028_wifi_smoke.py
firmware/lexie-waveshare-idf/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  lexie_audio.c  lexie_audio.h  lexie_audio_mp3_bridge.cpp  lexie_audio_mp3_bridge.h  lexie_config.c  lexie_config.h  lexie_e2e.c  lexie_e2e.h  lexie_flash.c  lexie_flash.h  lexie_http.c  lexie_http.h  lexie_wifi.c  lexie_wifi.h  main.c
firmware/lexie-waveshare-idf/main/board/: Button_Driver.h  Button_Driver_stub.c  I2S_Driver.h  SD_MMC.h  SD_MMC_stub.c  i2s_board.c
hardware/: README.md  lexie-bookmark-design.html  lexie-clip-detail.html  lexie-plaud-form-factor.html
lexie-docs/: README.md  REGISTRY.md
lexie-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
lexie-server/lexie_server/: __init__.py  audioutil.py  config.py  db.py  deps.py  main.py  models_orm.py  prompts.py
lexie-server/lexie_server/routers/: admin.py  explain.py  health.py  profile.py  telemetry.py  usage.py
lexie-server/lexie_server/services/: __init__.py  pipeline.py
lexie-server/lexie_server/static_prototype/: index.html
lexie-server/lexie_server/templates/: admin.html
lexie-server/scripts/: bootstrap-venv.sh
lexie-server/tests/: conftest.py  test_api.py  test_config.py  test_pipeline_simulation.py  test_telemetry.py
project-management/: README.md  SCHEMA.md  hardware-shopping-cart.md  lx-4-network-policy.md  lx-4-path-a-bench-layout.md  lx-4-path-a-bench-testing.md  lx-4-path-a-component-kit.md  lx-4-path-b-bench-testing.md  lx-4-path-b-waveshare-kit.md  lx-4-platform-pivot-waveshare.md  registry.md  work-inventory.md  wx-027-beginner-bench-guide.html  (+4 more)
(+57 files in other folders)
