[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexie-server"
version = "0.1.0"
description = "Lexie Word Explainer — FastAPI (LX-1 Phase 1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "pydantic-settings>=2.0",
  "python-multipart",
  "openai>=1.40",
  "jinja2",
  "pydub",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0", "respx>=0.22"]

[tool.hatch.build.targets.wheel]
packages = ["lexie_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
